# yt-search

./: .gitignore  .npmignore  COMPLETE_SETUP.md  GITHUB_SETUP.md  LICENSE  README.md  README_ENHANCED.md  RELEASE_NOTES_v1.0.0.md  SEARCH_TIPS.md  github-setup.sh  index.js  install.sh  install_improved.sh  package.json  pyproject.toml  release.sh  retro_yt.py  setup.py  smart_install.py  youtube_clickable.py  youtube_search.py  youtube_search_enhanced.py  youtube_search_fixed.py
scripts/: postinstall.js
yt_search/: __init__.py  display.py  main.py  search.py  utils.py
